--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
@@ -23,6 +24,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
+    "swagger-ui-express": "^4.4.0",
     "ts-node": "^10.7.0"
   }
 }
