--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsoa spec-and-routes && tsc",
     "start": "node dist/index.js",
     "test": "jest"
   },
@@ -12,17 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "@types/swagger-ui-express": "^4.1.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "tsoa": "^4.0.0",
+    "swagger-ui-express": "^4.4.0"
   }
 }
