--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -22,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-apiclient": "openapi --input ../backend/src/openapi/swagger.json --output ./src/utils/apiclient"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +55,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "openapi-typescript-codegen": "^0.22.0",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.2",
     "stylelint-config-css-modules": "^4.1.0",
