--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsoa spec-and-routes && tsc",
     "start": "node dist/index.js",
-    "test": "jest --coverage"
+    "test": "jest --watch",
+    "test:ci": "jest --coverage"
   },
   "keywords": [],
   "author": "",
