target builder in pipeline, switch to specific alpine image

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build docker frontend image
         working-directory: frontend
-        run: docker build -t digivisio-frontend .
+        run: docker build -t digivisio-frontend . --target builder
 
       - name: Run frontend tests
         working-directory: frontend
