--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,17 +25,17 @@ jobs:
         working-directory: backend
         run: docker run -e CI=true ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest npm run test:ci
 
-      - name: 'Push backend'
+      # todo move to deploy job when done testing
+      - name: "Login to ACR"
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}        
-      - run: |            
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
-
-
+      - name: "Push backend"
+        run: |
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest
 
   test-frontend:
     runs-on: ubuntu-latest
@@ -46,18 +46,34 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build docker frontend image
+      - name: Build frontend builder image
         working-directory: frontend
-        run: docker build -t digivisio-frontend . --target builder
+        run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-frontend:latest . --target builder
 
       - name: Run frontend tests
         working-directory: frontend
-        run: docker run -e CI=true digivisio-frontend npm test
+        run: docker run -e CI=true ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-frontend:latest npm test
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [test, build]
-  #   steps:
-  #     - name: Deploy?!
-  #       run: |
-  #        # deploy somewhere
+      - name: Build frontend prod image
+        working-directory: frontend
+        run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-frontend:latest . --target prod
+
+      # todo move to deploy job when done testing
+      - name: "Login to ACR"
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: "Push frontend"
+        run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-frontend:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test-frontend, test-backend]
+    # if: add branch condition when done testing
+    steps:
+      - name: Deploy?!
+        run: |
+          echo 'yaaay'
