--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ PGADMIN_DEFAULT_PASSWORD=<someothersecret>
 BACKEND_PORT=3001
 FRONTEND_PORT=3000
 AOE_API_SEARCH_BASEURL=https://aoe.fi/api/v2/search
+AOE_API_BASEURL=https://aoe.fi/api/v2
