--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   backend:
     image: digivisioacr.azurecr.io/digivisio-backend:latest
     restart: always
+    networks:
+      - app-network
     ports:
       - ${BACKEND_PORT}:${BACKEND_PORT}
     environment:
@@ -11,6 +13,8 @@ services:
   frontend:
     image: digivisioacr.azurecr.io/digivisio-frontend:latest
     restart: always
+    networks:
+      - app-network
     ports:
       - 443:443
     volumes:
@@ -20,6 +24,8 @@ services:
     image: postgres
     hostname: postgres
     restart: always
+    networks:
+      - app-network
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
@@ -27,6 +33,9 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     expose:
       - 5432
+
+networks:
+  app-network:
 
 volumes:
   db-data:
