add api prefix to routes

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,9 +11,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ^~/api/ {
-        rewrite ^/api/(.*)$ /$1 break;
-        proxy_pass http://backend:3001/;
+    location /api {        
+        proxy_pass http://backend:3001;
     }
 
     error_page   500 502 503 504  /50x.html;
