--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsoa spec-and-routes && tsc",
+    "generate-tsoa": "tsoa routes && tsoa spec-and-routes",
+    "build": "npm run generate-tsoa && tsc",
     "start": "node dist/index.js",
     "test": "jest --watch",
     "test:ci": "jest --coverage"
