--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
+    "@types/pg": "^8.6.5",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
