--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ BACKEND_PORT=3001
 FRONTEND_PORT=3000
 AOE_API_BASEURL=https://aoe.fi/api/v2
 CORS_ORIGIN=https://localhost
+JWT_SIGNING_KEY=somesigningkey
+JWT_VALID_AUDIENCE=digivisio
+JWT_VALID_ISSUER=digivisioapp
