Add skeleton for single result page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate-apiclient": "openapi --input ../backend/src/openapi/swagger.json --output ./src/utils/apiclient"
+    "generate-apiclient": "openapi --input ../backend/src/openapi/swagger.json --output ./src/utils/apiclient",
+    "lint:fix": "eslint --fix src && prettier --write src"
   },
   "eslintConfig": {
     "extends": [
