add eslint to backend and run in pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,10 @@ jobs:
         working-directory: backend
         run: docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest . --target prod
 
+      - name: Run backend lint
+        working-directory: backend
+        run: docker run ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest npm run lint
+
       - name: Run backend tests
         working-directory: backend
         run: docker run -e CI=true ${{ secrets.REGISTRY_LOGIN_SERVER }}/digivisio-backend:latest npm run test:ci
