--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "npm run generate-tsoa && tsc",
     "start": "tsc && node dist/index.js",
     "test": "jest --watch",
-    "test:ci": "jest --coverage"
+    "test:ci": "jest --coverage",
+    "lint": "eslint \"./src/**\""
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,17 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/pg": "^8.6.5",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
+    "prettier": "^2.6.2",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   },
