--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   },
