--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,10 +17,10 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Run integration tests        
+      - name: Run integration tests
         run: |
-          docker-compose -f .\compose.yml build `
-          docker-compose -f .\compose.yml run backend npm run test:ci
+          docker-compose -f ./compose.yml build \
+          docker-compose -f ./compose.yml run backend npm run test:ci
 
       - name: Build docker test image
         working-directory: backend
