--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,7 +16,7 @@ COPY .eslintrc.json ./
 
 FROM base as devtest
 
-# these are here for running e2e tests with headless chrome
+# these are here for running e2e tests with headless chrome in puppeteer
 RUN apt-get update
 RUN apt-get upgrade -y
 RUN apt-get -y install ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils 
@@ -36,5 +36,7 @@ FROM base as prod
 RUN npm run build
 
 EXPOSE 3001
+
+USER node
 
 CMD [ "node", "./dist/index.js"]
