--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,4 +1,5 @@
 # this must not contain secrets, pass secrets through other env files in dev or in compose.yml
 BACKEND_PORT=3001
 AOE_API_BASEURL=https://aoe.fi/api/v2
+FINNA_API_BASEURL=https://api.finna.fi/api/v1
 OPINTOPOLKU_API_BASEURL=https://opintopolku.fi
