--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -9,7 +9,8 @@
     ],
     "ignorePatterns": [
         "openapi/",
-        "externalModels/"
+        "externalModels/",
+        "finnaapiclient/"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
