add some comments

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,6 +11,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # when running in "production" we at the moment only have one host:port so we need to proxy calls to /api to the backend container
+    # 'backend' host refers to the hostname/service configured in docker-compose.yml
     location /api {        
         proxy_pass http://backend:3001;
     }
