--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Run integration tests
+      - name: Run unit, integration and e2e tests
         run: |
           cp .env.test .env \
           && docker-compose -f ./docker-compose.yml -f ./docker-compose-local.yml build \
