--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 # these are sample .env variables, but for the purpose of this project, can also be used on the "production" server as is
 
 DB_PASSWORD=topsecret
-DB_NAME=somedb
+DB_NAME=digivisio
 PGADMIN_DEFAULT_EMAIL=placeholder@example.com
 PGADMIN_DEFAULT_PASSWORD=alsosecret
 BACKEND_PORT=3001
